set(crayg_SRCS
    # cmake-format: sortable
    crayg/compatibility/lodepng/fmt/LodePNG_formatter.cpp
    crayg/compatibility/lodepng/fmt/LodePNG_formatter.h
    crayg/compatibility/openexr/fmt/ImathBox_formatter.cpp
    crayg/compatibility/openexr/fmt/ImathBox_formatter.cpp
    crayg/compatibility/openexr/fmt/ImathBox_formatter.h
    crayg/compatibility/openexr/fmt/ImfCompression_formatter.cpp
    crayg/compatibility/openexr/fmt/ImfCompression_formatter.h
    crayg/compatibility/openexr/fmt/ImfPixelType_formatter.cpp
    crayg/compatibility/openexr/fmt/ImfPixelType_formatter.h
    crayg/compatibility/usd/fmt/SdfPath_formatter.h
    crayg/compatibility/usd/fmt/SdfValueTypeName_formatter.h
    crayg/compatibility/usd/fmt/TfToken_formatter.h
    crayg/compatibility/usd/fmt/UsdStagePtr_formatter.h
    crayg/CraygInfo.cpp
    crayg/CraygInfo.h
    crayg/foundation/areaiterators/AreaIterators.h
    crayg/foundation/areaiterators/ScanlineIterator.h
    crayg/foundation/areaiterators/tiles/HilbertSequence.cpp
    crayg/foundation/areaiterators/tiles/HilbertSequence.h
    crayg/foundation/areaiterators/tiles/MortonSequence.cpp
    crayg/foundation/areaiterators/tiles/MortonSequence.h
    crayg/foundation/areaiterators/tiles/ScanlineSequence.cpp
    crayg/foundation/areaiterators/tiles/ScanlineSequence.h
    crayg/foundation/areaiterators/tiles/SpiralSequence.cpp
    crayg/foundation/areaiterators/tiles/SpiralSequence.h
    crayg/foundation/areaiterators/tiles/tilequeues/FollowMouseTileQueue.cpp
    crayg/foundation/areaiterators/tiles/tilequeues/FollowMouseTileQueue.h
    crayg/foundation/areaiterators/tiles/tilequeues/FollowSequenceTileQueue.cpp
    crayg/foundation/areaiterators/tiles/tilequeues/FollowSequenceTileQueue.h
    crayg/foundation/areaiterators/tiles/tilequeues/TileQueue.cpp
    crayg/foundation/areaiterators/tiles/tilequeues/TileQueue.h
    crayg/foundation/areaiterators/tiles/tilequeues/TileQueueMode.h
    crayg/foundation/areaiterators/tiles/TileSequence.h
    crayg/foundation/areaiterators/tiles/TileSequences.cpp
    crayg/foundation/areaiterators/tiles/TileSequences.h
    crayg/foundation/areaiterators/tiles/TileSequenceType.cpp
    crayg/foundation/areaiterators/tiles/TileSequenceType.h
    crayg/foundation/assertions/Preconditions.h
    crayg/foundation/containers/Array2d.h
    crayg/foundation/enums/EnumFormatter.h
    crayg/foundation/enums/EnumParser.h
    crayg/foundation/enums/ValueMapper.h
    crayg/foundation/exceptions/Exceptions.cpp
    crayg/foundation/exceptions/Exceptions.h
    crayg/foundation/executable/CraygMain.h
    crayg/foundation/filesystem/FileAsString.cpp
    crayg/foundation/filesystem/FileAsString.h
    crayg/foundation/logging/Logger.cpp
    crayg/foundation/logging/Logger.h
    crayg/foundation/macros/ForeachVararg.h
    crayg/foundation/math/CommonMath.h
    crayg/foundation/math/geometry/Bound2d.cpp
    crayg/foundation/math/geometry/Bound2d.h
    crayg/foundation/math/geometry/BoundingBox.cpp
    crayg/foundation/math/geometry/BoundingBox.h
    crayg/foundation/math/geometry/Color.cpp
    crayg/foundation/math/geometry/Color.h
    crayg/foundation/math/geometry/Color_formatter.h
    crayg/foundation/math/geometry/Gradient.h
    crayg/foundation/math/geometry/Matrix4x4f.cpp
    crayg/foundation/math/geometry/Matrix4x4f.h
    crayg/foundation/math/geometry/OrthonormalBasis.cpp
    crayg/foundation/math/geometry/OrthonormalBasis.h
    crayg/foundation/math/geometry/Ray.cpp
    crayg/foundation/math/geometry/Ray.h
    crayg/foundation/math/geometry/Resolution.cpp
    crayg/foundation/math/geometry/Resolution.h
    crayg/foundation/math/geometry/Tile.cpp
    crayg/foundation/math/geometry/Tile.h
    crayg/foundation/math/geometry/Transform.cpp
    crayg/foundation/math/geometry/Transform.h
    crayg/foundation/math/geometry/Vector2.h
    crayg/foundation/math/geometry/Vector2_formatter.h
    crayg/foundation/math/geometry/Vector3f.cpp
    crayg/foundation/math/geometry/Vector3f.h
    crayg/foundation/math/geometry/Vector3f_formatter.h
    crayg/foundation/math/QuadraticEquations.h
    crayg/foundation/numerics/AtomicFloats.h
    crayg/foundation/numerics/BitCast.h
    crayg/foundation/objects/DtoUtils.h
    crayg/foundation/objects/ToStringHelper.h
    crayg/foundation/parallel/ParallelLoops.h
    crayg/foundation/parallel/ThreadCount.cpp
    crayg/foundation/parallel/ThreadCount.h
    crayg/foundation/physics/Wavelengths.cpp
    crayg/foundation/physics/Wavelengths.h
    crayg/foundation/progress/RemainingTimeCalculator.cpp
    crayg/foundation/progress/RemainingTimeCalculator.h
    crayg/foundation/progress/StopWatch.cpp
    crayg/foundation/progress/StopWatch.h
    crayg/foundation/progress/StopWatchHelperMacros.h
    crayg/foundation/progress/TaskReporter.cpp
    crayg/foundation/progress/TaskReporter.h
    crayg/foundation/reporting/Heatmap.cpp
    crayg/foundation/reporting/Heatmap.h
    crayg/foundation/strings/CommentStripper.cpp
    crayg/foundation/strings/CommentStripper.h
    crayg/foundation/strings/Humanize.cpp
    crayg/foundation/strings/Humanize.h
    crayg/foundation/strings/NumberParsing.cpp
    crayg/foundation/strings/NumberParsing.h
    crayg/foundation/tracing/CraygTracing.h
    crayg/image/ColorConversion.cpp
    crayg/image/ColorConversion.h
    crayg/image/film/buffers/FilmAccumulationBuffer.h
    crayg/image/film/buffers/FilmBufferBase.h
    crayg/image/film/buffers/FilmBufferFactory.cpp
    crayg/image/film/buffers/FilmBufferFactory.h
    crayg/image/film/buffers/FilmBufferType.cpp
    crayg/image/film/buffers/FilmBufferType.h
    crayg/image/film/buffers/FilmBufferVariants.cpp
    crayg/image/film/buffers/FilmBufferVariants.h
    crayg/image/film/buffers/FilmSumBuffer.h
    crayg/image/film/buffers/FilmValueBuffer.h
    crayg/image/film/buffers/FilmValueTrait.h
    crayg/image/film/Film.cpp
    crayg/image/film/Film.h
    crayg/image/film/FilmSpec.cpp
    crayg/image/film/FilmSpec.h
    crayg/image/Image.cpp
    crayg/image/Image.h
    crayg/image/ImageAlgorithms.cpp
    crayg/image/ImageAlgorithms.h
    crayg/image/ImageChannelPathResolver.cpp
    crayg/image/ImageChannelPathResolver.h
    crayg/image/ImageMetadata.cpp
    crayg/image/ImageMetadata.h
    crayg/image/ImageMetadataValue.h
    crayg/image/ImageSpec.cpp
    crayg/image/ImageSpec.h
    crayg/image/ImageTile.cpp
    crayg/image/ImageTile.h
    crayg/image/io/imageformatwriters/BaseImageFormatWriteOptions.h
    crayg/image/io/imageformatwriters/exr/OpenExrFormatWriteOptions.cpp
    crayg/image/io/imageformatwriters/exr/OpenExrFormatWriteOptions.h
    crayg/image/io/imageformatwriters/exr/OpenExrImageFormatWriter.cpp
    crayg/image/io/imageformatwriters/exr/OpenExrImageFormatWriter.h
    crayg/image/io/imageformatwriters/ImageBufferTypeTrait.h
    crayg/image/io/imageformatwriters/ImageFormatWriteOptions.h
    crayg/image/io/imageformatwriters/ImageFormatWriter.h
    crayg/image/io/imageformatwriters/ImageFormatWriters.cpp
    crayg/image/io/imageformatwriters/ImageFormatWriters.h
    crayg/image/io/imageformatwriters/png/PngImageFormatWriteOptions.cpp
    crayg/image/io/imageformatwriters/png/PngImageFormatWriteOptions.h
    crayg/image/io/imageformatwriters/png/PngImageFormatWriter.cpp
    crayg/image/io/imageformatwriters/png/PngImageFormatWriter.h
    crayg/image/PixelBuffer.cpp
    crayg/image/PixelBuffer.h
    crayg/image/PixelFormat.cpp
    crayg/image/PixelFormat.h
    crayg/image/UnsupportedPixelFormat.h
    crayg/imaging/CameraLens.cpp
    crayg/imaging/CameraLens.h
    crayg/imaging/CameraLensMetadata.cpp
    crayg/imaging/CameraLensMetadata.h
    crayg/imaging/ExitPupil.cpp
    crayg/imaging/ExitPupil.h
    crayg/imaging/ExitPupilCalculator.cpp
    crayg/imaging/ExitPupilCalculator.h
    crayg/imaging/LensGeometry.cpp
    crayg/imaging/LensGeometry.h
    crayg/imaging/lensio/extendedformat/LensFileExtendedFormatReader.cpp
    crayg/imaging/lensio/extendedformat/LensFileExtendedFormatReader.h
    crayg/imaging/lensio/extendedformat/LensFileExtendedFormatWriter.cpp
    crayg/imaging/lensio/extendedformat/LensFileExtendedFormatWriter.h
    crayg/imaging/lensio/json/LensFileJsonReader.cpp
    crayg/imaging/lensio/json/LensFileJsonReader.h
    crayg/imaging/lensio/json/LensFileJsonWriter.cpp
    crayg/imaging/lensio/json/LensFileJsonWriter.h
    crayg/imaging/lensio/LensFileFormat.cpp
    crayg/imaging/lensio/LensFileFormat.h
    crayg/imaging/lensio/LensFileParseUtils.cpp
    crayg/imaging/lensio/LensFileParseUtils.h
    crayg/imaging/lensio/LensFileReader.cpp
    crayg/imaging/lensio/LensFileReader.h
    crayg/imaging/lensio/LensFileReaderFactory.cpp
    crayg/imaging/lensio/LensFileReaderFactory.h
    crayg/imaging/lensio/LensFileWriter.cpp
    crayg/imaging/lensio/LensFileWriter.h
    crayg/imaging/lensio/LensFileWriterFactory.cpp
    crayg/imaging/lensio/LensFileWriterFactory.h
    crayg/imaging/lensio/textfile/LensFileTextFileReader.cpp
    crayg/imaging/lensio/textfile/LensFileTextFileReader.h
    crayg/imaging/lensio/textfile/LensFileTextFileWriter.cpp
    crayg/imaging/lensio/textfile/LensFileTextFileWriter.h
    crayg/imaging/lensio/zmx/ZMXFileFormatReader.cpp
    crayg/imaging/lensio/zmx/ZMXFileFormatReader.h
    crayg/imaging/LensMaterial.cpp
    crayg/imaging/LensMaterial.h
    crayg/imaging/LensRaytracerTracer.cpp
    crayg/imaging/LensRaytracerTracer.h
    crayg/imaging/LensSurface.cpp
    crayg/imaging/LensSurface.h
    crayg/imaging/materials/LensMaterialConstants_ohara.h
    crayg/imaging/materials/LensMaterialConstants_schott.h
    crayg/imaging/materials/LensMaterialIds_ohara.h
    crayg/imaging/materials/LensMaterialIds_schott.h
    crayg/imaging/ThickLensApproximation.cpp
    crayg/imaging/ThickLensApproximation.h
    crayg/imaging/VariableLensDistances.cpp
    crayg/imaging/VariableLensDistances.h
    crayg/Initialization.cpp
    crayg/Initialization.cpp
    crayg/Initialization.h
    crayg/Initialization.h
    crayg/renderer/FlareRenderer.cpp
    crayg/renderer/FlareRenderer.h
    crayg/renderer/GeometryCompiler.cpp
    crayg/renderer/GeometryCompiler.h
    crayg/renderer/ImageMetadataCollector.cpp
    crayg/renderer/ImageMetadataCollector.h
    crayg/renderer/integrators/AbstractIntegrator.cpp
    crayg/renderer/integrators/AbstractIntegrator.h
    crayg/renderer/integrators/AmbientOcclusionIntegrator.cpp
    crayg/renderer/integrators/AmbientOcclusionIntegrator.h
    crayg/renderer/integrators/DebugIntegrator.cpp
    crayg/renderer/integrators/DebugIntegrator.h
    crayg/renderer/integrators/IntegratorFactory.cpp
    crayg/renderer/integrators/IntegratorFactory.h
    crayg/renderer/integrators/IntegratorSettings.cpp
    crayg/renderer/integrators/IntegratorSettings.h
    crayg/renderer/integrators/IntegratorSettingsValue.h
    crayg/renderer/integrators/IntegratorType.cpp
    crayg/renderer/integrators/IntegratorType.h
    crayg/renderer/integrators/RaytracingIntegrator.cpp
    crayg/renderer/integrators/RaytracingIntegrator.h
    crayg/renderer/integrators/SurfaceInteraction.cpp
    crayg/renderer/integrators/SurfaceInteraction.h
    crayg/renderer/intersectors/embree/EmbreeBvh.cpp
    crayg/renderer/intersectors/embree/EmbreeBvh.h
    crayg/renderer/intersectors/embree/EmbreeBvhBuilder.cpp
    crayg/renderer/intersectors/embree/EmbreeBvhBuilder.h
    crayg/renderer/intersectors/embree/EmbreeSceneIntersector.cpp
    crayg/renderer/intersectors/embree/EmbreeSceneIntersector.h
    crayg/renderer/intersectors/embree/EmbreeUtils.cpp
    crayg/renderer/intersectors/embree/EmbreeUtils.h
    crayg/renderer/intersectors/IntersectorFactory.cpp
    crayg/renderer/intersectors/IntersectorFactory.h
    crayg/renderer/intersectors/IntersectorType.cpp
    crayg/renderer/intersectors/IntersectorType.h
    crayg/renderer/intersectors/SceneIntersector.h
    crayg/renderer/outputdrivers/NextGenOutputDriver.cpp
    crayg/renderer/outputdrivers/NextGenOutputDriver.cpp
    crayg/renderer/outputdrivers/NextGenOutputDriver.h
    crayg/renderer/Renderer.cpp
    crayg/renderer/Renderer.h
    crayg/renderer/SampleAccumulator.cpp
    crayg/renderer/SampleAccumulator.h
    crayg/renderer/sampling/Random.cpp
    crayg/renderer/sampling/Random.h
    crayg/renderer/sampling/Sampling.cpp
    crayg/renderer/sampling/Sampling.h
    crayg/renderer/TextureStats.cpp
    crayg/renderer/TextureStats.h
    crayg/renderer/tilesamplers/AdaptiveTileSampler.cpp
    crayg/renderer/tilesamplers/AdaptiveTileSampler.h
    crayg/renderer/tilesamplers/TileSampler.cpp
    crayg/renderer/tilesamplers/TileSampler.h
    crayg/renderer/tilesamplers/TileSamplerFactory.cpp
    crayg/renderer/tilesamplers/TileSamplerFactory.h
    crayg/renderer/tilesamplers/TileSamplerType.cpp
    crayg/renderer/tilesamplers/TileSamplerType.h
    crayg/renderer/tilesamplers/UniformTileSampler.cpp
    crayg/renderer/tilesamplers/UniformTileSampler.h
    crayg/renderer/TileSizeEstimator.cpp
    crayg/renderer/TileSizeEstimator.h
    crayg/renderer/TileStats.cpp
    crayg/renderer/TileStats.h
    crayg/scene/camera/Camera.cpp
    crayg/scene/camera/Camera.h
    crayg/scene/camera/CameraModel.h
    crayg/scene/camera/CameraModelFactory.cpp
    crayg/scene/camera/CameraModelFactory.h
    crayg/scene/camera/CameraType.cpp
    crayg/scene/camera/CameraType.h
    crayg/scene/camera/CameraUtils.cpp
    crayg/scene/camera/CameraUtils.h
    crayg/scene/camera/pinhole/PinholeCameraModel.cpp
    crayg/scene/camera/pinhole/PinholeCameraModel.h
    crayg/scene/camera/realistic/RealisticCameraModel.cpp
    crayg/scene/camera/realistic/RealisticCameraModel.h
    crayg/scene/camera/thinlens/ThinLensCameraModel.cpp
    crayg/scene/camera/thinlens/ThinLensCameraModel.h
    crayg/scene/Imageable.cpp
    crayg/scene/Imageable.h
    crayg/scene/io/read/SceneReader.cpp
    crayg/scene/io/read/SceneReader.h
    crayg/scene/io/read/usd/base/BaseUsdImageableReader.h
    crayg/scene/io/read/usd/base/BaseUsdLightReader.h
    crayg/scene/io/read/usd/base/BaseUsdReader.h
    crayg/scene/io/read/usd/base/BaseUsdShadingNodeReader.cpp
    crayg/scene/io/read/usd/base/BaseUsdShadingNodeReader.h
    crayg/scene/io/read/usd/base/BaseUsdXformableReader.h
    crayg/scene/io/read/usd/camera/UsdCameraReader.cpp
    crayg/scene/io/read/usd/camera/UsdCameraReader.h
    crayg/scene/io/read/usd/lights/UsdDiskLightReader.cpp
    crayg/scene/io/read/usd/lights/UsdDiskLightReader.h
    crayg/scene/io/read/usd/lights/UsdRectLightReader.cpp
    crayg/scene/io/read/usd/lights/UsdRectLightReader.h
    crayg/scene/io/read/usd/lights/UsdSphereLightReader.cpp
    crayg/scene/io/read/usd/lights/UsdSphereLightReader.h
    crayg/scene/io/read/usd/primitives/UsdMeshReader.cpp
    crayg/scene/io/read/usd/primitives/UsdMeshReader.h
    crayg/scene/io/read/usd/primitives/UsdPointInstancerReader.cpp
    crayg/scene/io/read/usd/primitives/UsdPointInstancerReader.h
    crayg/scene/io/read/usd/primitives/UsdSphereReader.cpp
    crayg/scene/io/read/usd/primitives/UsdSphereReader.h
    crayg/scene/io/read/usd/primitives/UsdSubdivisionSurfaceMeshReader.cpp
    crayg/scene/io/read/usd/primitives/UsdSubdivisionSurfaceMeshReader.h
    crayg/scene/io/read/usd/shadingnetworks/caches/UsdMaterialReadCache.cpp
    crayg/scene/io/read/usd/shadingnetworks/caches/UsdMaterialReadCache.h
    crayg/scene/io/read/usd/shadingnetworks/caches/UsdShadingNodeReadCache.cpp
    crayg/scene/io/read/usd/shadingnetworks/caches/UsdShadingNodeReadCache.h
    crayg/scene/io/read/usd/shadingnetworks/materials/UsdPreviewSurfaceReader.cpp
    crayg/scene/io/read/usd/shadingnetworks/materials/UsdPreviewSurfaceReader.h
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/UsdCheckerBoardReader.cpp
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/UsdCheckerBoardReader.h
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/UsdColorToFloatReader.cpp
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/UsdColorToFloatReader.h
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/UsdConstantShadingNodeReaders.cpp
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/UsdConstantShadingNodeReaders.h
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/UsdConversionNodesReaders.cpp
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/UsdConversionNodesReaders.h
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/UsdFileTextureReader.cpp
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/UsdFileTextureReader.h
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/UsdPrimVarReaderReaders.cpp
    crayg/scene/io/read/usd/shadingnetworks/shadingnodes/UsdPrimVarReaderReaders.h
    crayg/scene/io/read/usd/shadingnetworks/UsdShadingNodeReadUtils.cpp
    crayg/scene/io/read/usd/shadingnetworks/UsdShadingNodeReadUtils.h
    crayg/scene/io/read/usd/UsdRenderSettingsReader.cpp
    crayg/scene/io/read/usd/UsdRenderSettingsReader.h
    crayg/scene/io/read/usd/UsdSceneReader.cpp
    crayg/scene/io/read/usd/UsdSceneReader.h
    crayg/scene/io/read/usd/UsdStageReader.cpp
    crayg/scene/io/read/usd/UsdStageReader.h
    crayg/scene/io/SceneReaderFactory.cpp
    crayg/scene/io/SceneReaderFactory.h
    crayg/scene/io/SceneWriterFactory.cpp
    crayg/scene/io/SceneWriterFactory.h
    crayg/scene/io/usd/UsdConversions.cpp
    crayg/scene/io/usd/UsdConversions.h
    crayg/scene/io/usd/UsdLensFileUtils.cpp
    crayg/scene/io/usd/UsdLensFileUtils.h
    crayg/scene/io/usd/UsdReadUtils.cpp
    crayg/scene/io/usd/UsdReadUtils.h
    crayg/scene/io/usd/UsdTypeUtil.h
    crayg/scene/io/usd/UsdUtils.h
    crayg/scene/io/write/SceneWriter.cpp
    crayg/scene/io/write/SceneWriter.h
    crayg/scene/io/write/usd/base/BaseUsdLightWriter.h
    crayg/scene/io/write/usd/base/BaseUsdMaterialWriter.h
    crayg/scene/io/write/usd/base/BaseUsdSceneObjectWriter.h
    crayg/scene/io/write/usd/base/BaseUsdShadingNodeWriter.h
    crayg/scene/io/write/usd/base/BaseUsdTransformableWriter.h
    crayg/scene/io/write/usd/base/BaseUsdWriter.h
    crayg/scene/io/write/usd/camera/UsdCameraWriter.cpp
    crayg/scene/io/write/usd/camera/UsdCameraWriter.h
    crayg/scene/io/write/usd/lights/UsdDiskLightWriter.cpp
    crayg/scene/io/write/usd/lights/UsdDiskLightWriter.h
    crayg/scene/io/write/usd/lights/UsdPointLightWriter.cpp
    crayg/scene/io/write/usd/lights/UsdPointLightWriter.h
    crayg/scene/io/write/usd/lights/UsdRectLightWriter.cpp
    crayg/scene/io/write/usd/lights/UsdRectLightWriter.h
    crayg/scene/io/write/usd/primitives/UsdGroundPlaneWriter.cpp
    crayg/scene/io/write/usd/primitives/UsdGroundPlaneWriter.h
    crayg/scene/io/write/usd/primitives/UsdPointInstancerWriter.cpp
    crayg/scene/io/write/usd/primitives/UsdPointInstancerWriter.h
    crayg/scene/io/write/usd/primitives/UsdSphereWriter.cpp
    crayg/scene/io/write/usd/primitives/UsdSphereWriter.h
    crayg/scene/io/write/usd/primitives/UsdSubdivisionSurfaceMeshWriter.cpp
    crayg/scene/io/write/usd/primitives/UsdSubdivisionSurfaceMeshWriter.h
    crayg/scene/io/write/usd/primitives/UsdTriangleMeshWriter.cpp
    crayg/scene/io/write/usd/primitives/UsdTriangleMeshWriter.h
    crayg/scene/io/write/usd/shadingnetworks/caches/UsdMaterialWriteCache.cpp
    crayg/scene/io/write/usd/shadingnetworks/caches/UsdMaterialWriteCache.h
    crayg/scene/io/write/usd/shadingnetworks/caches/UsdShadingNodeWriteCache.cpp
    crayg/scene/io/write/usd/shadingnetworks/caches/UsdShadingNodeWriteCache.h
    crayg/scene/io/write/usd/shadingnetworks/materials/UsdPreviewSurfaceWriter.cpp
    crayg/scene/io/write/usd/shadingnetworks/materials/UsdPreviewSurfaceWriter.h
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/UsdCheckerBoardWriter.cpp
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/UsdCheckerBoardWriter.h
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/UsdColorToFloatWriter.cpp
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/UsdColorToFloatWriter.h
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/UsdConstantShadingNodeWriters.cpp
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/UsdConstantShadingNodeWriters.h
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/UsdConversionNodeWriters.cpp
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/UsdConversionNodeWriters.h
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/UsdFileTextureWriter.cpp
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/UsdFileTextureWriter.cpp
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/UsdFileTextureWriter.h
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/UsdPrimVarReaderWriters.cpp
    crayg/scene/io/write/usd/shadingnetworks/shadingnodes/UsdPrimVarReaderWriters.cpp
    crayg/scene/io/write/usd/UsdPathFactory.cpp
    crayg/scene/io/write/usd/UsdPathFactory.h
    crayg/scene/io/write/usd/UsdRenderSettingsWriter.cpp
    crayg/scene/io/write/usd/UsdRenderSettingsWriter.h
    crayg/scene/io/write/usd/UsdSceneWriter.cpp
    crayg/scene/io/write/usd/UsdSceneWriter.h
    crayg/scene/lights/AreaLight.cpp
    crayg/scene/lights/AreaLight.h
    crayg/scene/lights/DiskLight.cpp
    crayg/scene/lights/DiskLight.h
    crayg/scene/lights/Light.cpp
    crayg/scene/lights/Light.h
    crayg/scene/lights/RectLight.cpp
    crayg/scene/lights/RectLight.h
    crayg/scene/lights/shapegenerators/AbstractLightShapeGenerator.cpp
    crayg/scene/lights/shapegenerators/AbstractLightShapeGenerator.h
    crayg/scene/lights/shapegenerators/DiskLightShapeGenerator.cpp
    crayg/scene/lights/shapegenerators/DiskLightShapeGenerator.h
    crayg/scene/lights/shapegenerators/RectLightShapeGenerator.cpp
    crayg/scene/lights/shapegenerators/RectLightShapeGenerator.h
    crayg/scene/primitives/GroundPlane.cpp
    crayg/scene/primitives/GroundPlane.h
    crayg/scene/primitives/PointInstancer.cpp
    crayg/scene/primitives/PointInstancer.h
    crayg/scene/primitives/Sphere.cpp
    crayg/scene/primitives/Sphere.h
    crayg/scene/primitives/subdivisionsurfacemesh/FanTriangulator.cpp
    crayg/scene/primitives/subdivisionsurfacemesh/FanTriangulator.h
    crayg/scene/primitives/subdivisionsurfacemesh/OpenSubdivRefiner.cpp
    crayg/scene/primitives/subdivisionsurfacemesh/OpenSubdivRefiner.h
    crayg/scene/primitives/subdivisionsurfacemesh/SubdivisionSurfaceMesh.cpp
    crayg/scene/primitives/subdivisionsurfacemesh/SubdivisionSurfaceMesh.h
    crayg/scene/primitives/trianglemesh/BarycentricCoordinates.cpp
    crayg/scene/primitives/trianglemesh/BarycentricCoordinates.h
    crayg/scene/primitives/trianglemesh/primvars/PrimVarType.cpp
    crayg/scene/primitives/trianglemesh/primvars/PrimVarType.h
    crayg/scene/primitives/trianglemesh/primvars/TriangleMeshAbstractPrimVar.h
    crayg/scene/primitives/trianglemesh/primvars/TriangleMeshPerFacePrimVar.h
    crayg/scene/primitives/trianglemesh/primvars/TriangleMeshPerPointPrimVar.h
    crayg/scene/primitives/trianglemesh/primvars/TriangleMeshPerVertexPrimVar.h
    crayg/scene/primitives/trianglemesh/Triangle.cpp
    crayg/scene/primitives/trianglemesh/Triangle.h
    crayg/scene/primitives/trianglemesh/TriangleMesh.cpp
    crayg/scene/primitives/trianglemesh/TriangleMesh.h
    crayg/scene/primitives/trianglemesh/TriangleMeshConversion.cpp
    crayg/scene/primitives/trianglemesh/TriangleMeshConversion.h
    crayg/scene/RegionToRender.cpp
    crayg/scene/RegionToRender.h
    crayg/scene/RenderSettings.cpp
    crayg/scene/RenderSettings.h
    crayg/scene/Scene.cpp
    crayg/scene/Scene.h
    crayg/scene/SceneObject.cpp
    crayg/scene/SceneObject.h
    crayg/scene/shadingnetworks/materials/EmissiveMaterial.cpp
    crayg/scene/shadingnetworks/materials/EmissiveMaterial.h
    crayg/scene/shadingnetworks/materials/Material.cpp
    crayg/scene/shadingnetworks/materials/Material.h
    crayg/scene/shadingnetworks/materials/UsdPreviewSurface.cpp
    crayg/scene/shadingnetworks/materials/UsdPreviewSurface.h
    crayg/scene/shadingnetworks/ShadingNode.cpp
    crayg/scene/shadingnetworks/ShadingNode.h
    crayg/scene/shadingnetworks/shadingnodes/CheckerBoard.cpp
    crayg/scene/shadingnetworks/shadingnodes/CheckerBoard.h
    crayg/scene/shadingnetworks/shadingnodes/ColorToFloat.cpp
    crayg/scene/shadingnetworks/shadingnodes/ColorToFloat.h
    crayg/scene/shadingnetworks/shadingnodes/ConstantShadingNodes.cpp
    crayg/scene/shadingnetworks/shadingnodes/ConstantShadingNodes.h
    crayg/scene/shadingnetworks/shadingnodes/ConversionNodes.cpp
    crayg/scene/shadingnetworks/shadingnodes/ConversionNodes.h
    crayg/scene/shadingnetworks/shadingnodes/FileTexture.cpp
    crayg/scene/shadingnetworks/shadingnodes/FileTexture.h
    crayg/scene/shadingnetworks/shadingnodes/PrimVarReaders.cpp
    crayg/scene/shadingnetworks/shadingnodes/PrimVarReaders.h
    crayg/scene/Transformable.cpp
    crayg/scene/Transformable.h
    crayg/testfoundation/fixtures/TemporaryDirectory.cpp
    crayg/testfoundation/fixtures/TemporaryDirectory.h)

add_library(crayg STATIC ${crayg_SRCS})

target_include_directories(crayg PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

if(WIN32)
    target_compile_definitions(crayg PUBLIC NOMINMAX _USE_MATH_DEFINES)
endif()
target_compile_definitions(crayg PUBLIC MAGIC_ENUM_RANGE_MAX=256 CATCH_CONFIG_ENABLE_ALL_STRINGMAKERS=1
                                        TBB_PREVIEW_CONCURRENT_ORDERED_CONTAINERS=1)

add_custom_command(
    TARGET crayg
    PRE_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CONAN_LIB_DIRS_USD}/usd ${CMAKE_BINARY_DIR}/bin/usd)

target_link_libraries(
    crayg
    ${CONAN_LIBS}
    ${CMAKE_DL_LIBS}
    cpptrace
    gilbert
    minitrace
    text_encoding_detect)
