set(UNIT_TEST_SOURCE_LIST
    # cmake-format: sortable
    containers/TestArray2d.cpp
    film/buffers/TestAccumulationBuffer.cpp
    film/buffers/TestBufferBase.cpp
    film/buffers/TestBufferVariantConversion.cpp
    film/buffers/TestFilmBufferFactory.cpp
    film/buffers/TestValueBuffer.cpp
    film/buffers/TestValueTrait.cpp
    film/TestFilm.cpp
    fixtures/CameraLensFixtures.cpp
    fixtures/CameraLensFixtures.h
    fixtures/PointInstancerFixtures.cpp
    fixtures/PointInstancerFixtures.h
    fixtures/ShadingNodeFixtures.cpp
    fixtures/ShadingNodeFixtures.h
    fixtures/SubdivisionSurfaceMeshFixtures.cpp
    fixtures/SubdivisionSurfaceMeshFixtures.h
    fixtures/TemporaryDirectory.cpp
    fixtures/TemporaryDirectory.h
    fixtures/TriangleMeshFixtures.cpp
    fixtures/TriangleMeshFixtures.h
    fixtures/UnitPlaneUvs.h
    fixtures/UsdGeomMeshFixtures.cpp
    fixtures/UsdGeomMeshFixtures.h
    TestAdaptiveBucketSampler.cpp
    TestAreaLight.cpp
    TestBarycentricCoordinates.cpp
    TestBaseUsdImageableReader.cpp
    TestBaseUsdLightReader.cpp
    TestBaseUsdLightWriter.cpp
    TestBaseUsdReader.cpp
    TestBaseUsdSceneObjectWriter.cpp
    TestBaseUsdTransformableWriter.cpp
    TestBaseUsdXformableReader.cpp
    TestBoundingBox.cpp
    TestBounds2d.cpp
    TestBucketImageBuffer.cpp
    TestBucketQueue.cpp
    TestBucketSizeEstimator.cpp
    TestCamera.cpp
    TestCameraLens.cpp
    TestCheckerBoard.cpp
    TestColor.cpp
    TestColorConversion.cpp
    TestColorToFloat.cpp
    TestConversionNodes.cpp
    TestDebugIntegrator.cpp
    TestDiskLight.cpp
    TestDiskLightShapeGenerator.cpp
    TestDtoUtils.cpp
    TestEmbreeBvhBuilder.cpp
    TestEmbreeSceneIntersector.cpp
    TestEmbreeUtils.cpp
    TestEnumParser.cpp
    TestExitPupilCalculator.cpp
    TestFanTriangulator.cpp
    TestFileSystemUtils.cpp
    TestFileTexture.cpp
    TestFollowMouseBucketQueue.cpp
    TestFollowSequenceBucketQueue.cpp
    TestGradient.cpp
    TestGroundPlane.cpp
    TestHeatMap.cpp
    TestImage.cpp
    TestImageAlgorithms.cpp
    TestImageBucketSequences.cpp
    TestImageChannelPathResolver.cpp
    TestImageIterators.cpp
    TestImageMetadata.cpp
    TestImageMetadataCollector.cpp
    TestImageOutputDriver.cpp
    TestImagePathResolver.cpp
    TestImageWriters.cpp
    TestIntegratorSettings.cpp
    TestLensFileExtendedFormatReader.cpp
    TestLensFileExtendedFormatWriter.cpp
    TestLensFileJsonReader.cpp
    TestLensFileJsonWriter.cpp
    TestLensFileReader.cpp
    TestLensFileTextFileReader.cpp
    TestLensFileTextFileWriter.cpp
    TestLensFileWriter.cpp
    TestLensMaterial.cpp
    TestLensRaytracerTracer.cpp
    TestLensSurface.cpp
    TestLight.cpp
    TestLineByLineIterator.cpp
    TestLineByLineSequence.cpp
    TestMathUtils.cpp
    TestMatrix4x4f.cpp
    TestNumberParsing.cpp
    TestOpenExrWriter.cpp
    TestOpenSubdivRefiner.cpp
    TestOrthonormalBasis.cpp
    TestPixelBuffer.cpp
    TestPngWriter.cpp
    TestPreconditions.cpp
    TestProgressReporter.cpp
    TestRay.cpp
    TestRaytracingIntegrator.cpp
    TestReadableFormatter.cpp
    TestRectLight.cpp
    TestRectLightShapeGenerator.cpp
    TestRegionToRender.cpp
    TestRemainingTimeCalculator.cpp
    TestRenderSettings.cpp
    TestResolution.cpp
    TestSampleAccumulator.cpp
    TestScene.cpp
    TestSceneReaderFactory.cpp
    TestSceneWriterFactory.cpp
    TestShadingNode.cpp
    TestSphere.cpp
    TestSpiralSequence.cpp
    TestSubdivisionSurfaceMesh.cpp
    TestSurfaceInteraction.cpp
    TestTaskReporter.cpp
    TestTeeOutputDriver.cpp
    TestThickLensApproximation.cpp
    TestToStringHelper.cpp
    TestTransform.cpp
    TestTriangle.cpp
    TestTriangleMesh.cpp
    TestTriangleMeshConversion.cpp
    TestTriangleMeshPerFacePrimVar.cpp
    TestTriangleMeshPerPointPrimVar.cpp
    TestTriangleMeshPerVertexPrimVar.cpp
    TestUniformBucketSampler.cpp
    TestUnitImageSampler.cpp
    TestUsdCameraReader.cpp
    TestUsdCameraWriter.cpp
    TestUsdCheckerBoardReader.cpp
    TestUsdCheckerBoardWriter.cpp
    TestUsdColorToFloatReader.cpp
    TestUsdColorToFloatWriter.cpp
    TestUsdConstantShadingNodeReaders.cpp
    TestUsdConstantShadingNodeWriters.cpp
    TestUsdConversionNodesReaders.cpp
    TestUsdConversionNodesWriters.cpp
    TestUsdConversions.cpp
    TestUsdDiskLightReader.cpp
    TestUsdDiskLightWriter.cpp
    TestUsdFileTextureReader.cpp
    TestUsdFileTextureWriter.cpp
    TestUsdGroundPlaneWriter.cpp
    TestUsdMaterialReadCache.cpp
    TestUsdMaterialWriteCache.cpp
    TestUsdMeshReader.cpp
    TestUsdPathFactory.cpp
    TestUsdPointInstancerReader.cpp
    TestUsdPointInstancerWriter.cpp
    TestUsdPointLightWriter.cpp
    TestUsdPreviewSurface.cpp
    TestUsdPreviewSurfaceReader.cpp
    TestUsdPreviewSurfaceWriter.cpp
    TestUsdPrimVarReaderReaders.cpp
    TestUsdPrimVarReaderWriters.cpp
    TestUsdReadUtils.cpp
    TestUsdRectLightReader.cpp
    TestUsdRectLightWriter.cpp
    TestUsdRenderSettingsReader.cpp
    TestUsdRenderSettingsWriter.cpp
    TestUsdSceneWriter.cpp
    TestUsdShadingNodeReadCache.cpp
    TestUsdShadingNodeWriteCache.cpp
    TestUsdSphereLightReader.cpp
    TestUsdSphereReader.cpp
    TestUsdSphereWriter.cpp
    TestUsdStageReader.cpp
    TestUsdSubdivisionSurfaceMeshReader.cpp
    TestUsdSubdivisionSurfaceMeshWriter.cpp
    TestUsdTriangleMeshWriter.cpp
    TestUsdUtils.cpp
    TestValueMapper.cpp
    TestVariableLensDistances.cpp
    TestVector2.cpp
    TestVector3f.cpp
    TestZMXFileFormatReader.cpp
    utils/TestAtomicFloats.cpp
    utils/TestBitCast.cpp)

set(TARGET_NAME crayg-unit-tests)

add_executable(${TARGET_NAME} # cmake-format: unsortable
               main.cpp ${UNIT_TEST_SOURCE_LIST})

target_link_libraries(${TARGET_NAME} PUBLIC crayg)

add_test(NAME ${TARGET_NAME} COMMAND ${TARGET_NAME} --durations yes)
